better analysis