@@ -1,54 +1,56 @@
 ### 🖥️ Node Analysis: ip-192-168-26-117.ec2.internal
 
-#### Node Capacity & Allocatable Resources
-- **CPU Capacity**: 4 cores
-- **Memory Capacity**: 15,896,988 Ki (~15.16 GiB)
-- **Allocatable CPU**: 3920m (~3.92 cores)
-- **Allocatable Memory**: 14,880,156 Ki (~14.18 GiB)
-- **Ephemeral Storage**: 83,873,772 Ki (~80 GiB)
-- **Pods Capacity**: 58
+#### Node Capacity & Allocatable Resources:
+- **CPU Capacity:** 4 cores
+- **Memory Capacity:** 15,896,988 Ki
+- **Allocatable CPU:** 3920m
+- **Allocatable Memory:** 14,880,156 Ki
+- **Pods Capacity & Allocatable:** 58
 
-#### Node Conditions
-- **Memory Pressure**: ❌ False (No memory pressure)
-- **Disk Pressure**: ❌ False (No disk pressure)
-- **PID Pressure**: ❌ False (No PID pressure)
-- **Node Ready**: ✅ True (Node is ready)
+#### Node Conditions:
+- **Memory Pressure:** ❌ False (Sufficient memory available)
+- **Disk Pressure:** ❌ False (No disk pressure)
+- **PID Pressure:** ❌ False (Sufficient PID available)
+- **Ready Status:** ✅ True (Node is ready)
 
-#### Cloud Provider Details
-- **Provider**: AWS
-- **Instance Type**: m5.xlarge
-- **Region**: us-east-1
-- **Zone**: us-east-1b
+#### Cloud Provider & Instance Type:
+- **Provider:** AWS
+- **Instance Type:** m5.xlarge
+- **Region:** us-east-1
+- **Zone:** us-east-1b
 
-#### Resource Allocation & Utilization
-- **CPU Requests**: 190m (4% of allocatable)
-- **Memory Requests**: 170Mi (1% of allocatable)
-- **Memory Limits**: 768Mi (5% of allocatable)
-- **Ephemeral Storage Requests**: 0
+#### Resource Allocation & Utilization:
+- **CPU Requests:** 190m (4%)
+- **Memory Requests:** 170Mi (1%)
+- **Memory Limits:** 768Mi (5%)
 
-#### Node-Level Issues
-- **OOM Events**: No OOM events detected.
+#### Node-Level Issues or Warnings:
+- No OOMKill events or system warnings detected.
 
-### 🏷️ Recommendations for Node-Level Optimizations
-1. **Resource Requests & Limits**: Consider setting resource requests and limits for all pods to ensure fair scheduling and prevent resource starvation.
-2. **Monitoring**: Implement monitoring for CPU and memory usage to better understand resource utilization trends.
-3. **Scaling**: Evaluate if the node's capacity aligns with current and future workload demands. Consider scaling up or down based on utilization.
+### Recommendations for Node-Level Optimizations:
+1. **Resource Requests & Limits:** Consider setting explicit CPU and memory limits for all pods to prevent over-allocation and ensure fair resource distribution.
+2. **Monitoring:** Implement monitoring for CPU and memory usage to identify potential bottlenecks or underutilization.
+3. **Scaling:** Evaluate the need for horizontal scaling if resource utilization approaches capacity limits.
 
-### 🚀 Pod-Level Analysis
-Unfortunately, no Aerospike Vector Search (AVS) pods were found on this node. Therefore, specific pod-level configurations and JVM settings cannot be analyzed.
+### Pod-Level Analysis:
+- **AVS Pods:** ❌ No Aerospike Vector Search pods found on this node.
 
-### 📈 Recommendations for Pod-Level Configurations
-1. **Ensure AVS Deployment**: Verify that AVS pods are correctly scheduled on nodes with appropriate resources.
-2. **JVM Configuration**: For AVS pods, ensure that JVM settings are optimized for your workload, focusing on heap size, garbage collection, and performance flags.
-3. **Node Affinity**: Use node affinity rules to ensure AVS pods are scheduled on nodes with sufficient resources and appropriate configurations.
+### Recommendations for Pod-Level Configurations:
+1. **Pod Distribution:** Ensure AVS pods are evenly distributed across nodes to balance the load and optimize resource usage.
+2. **Node Affinity:** Use node affinity or anti-affinity rules to control pod placement based on node labels or resources.
 
-### 🔍 General Recommendations
-1. **JVM Memory Settings**: If AVS pods are deployed, ensure JVM settings are configured for optimal performance:
-   - **Heap Size**: Set `-Xms` and `-Xmx` appropriately based on available memory.
-   - **GC Settings**: Use `-XX:+UseZGC` for low-latency garbage collection if applicable.
-   - **NUMA Settings**: Consider enabling `-XX:+UseNUMA` for better memory locality on NUMA systems.
+### Resource Allocation Adjustments:
+- **CPU & Memory Requests:** Review and adjust requests and limits for existing pods to align with actual usage patterns and prevent resource starvation.
 
-2. **Performance Improvements**: Regularly review and adjust JVM and Kubernetes configurations based on performance monitoring data.
+### Performance Improvements:
+1. **Node Utilization:** Regularly review node utilization metrics to identify opportunities for optimizing resource allocation.
+2. **Instance Type:** Consider upgrading to a larger instance type if consistent resource constraints are observed.
 
-### 📦 Conclusion
-The node is healthy and underutilized, providing a good opportunity to optimize resource allocation and scheduling. Ensure AVS pods are correctly deployed and configured to maximize performance and resource efficiency.
+### JVM Memory Settings (Hypothetical for AVS Pods):
+- **Initial Heap Size (-Xms):** Ensure it's set to a reasonable value based on pod memory requests.
+- **Maximum Heap Size (-Xmx):** Should not exceed the pod's memory limit to avoid OOM kills.
+- **GC Settings:** Use a suitable garbage collector like ZGC for low-latency applications.
+- **NUMA Settings:** If applicable, configure NUMA settings to optimize memory access patterns.
+
+### Conclusion:
+While the node is currently healthy and underutilized, it's essential to continuously monitor resource usage and adjust configurations to maintain optimal performance. Implementing the above recommendations will help in achieving efficient resource utilization and improved application performance. 🚀
