@@ -1,127 +1,4 @@
-# Comprehensive Cluster Analysis Report
-
-## 1. 🌐 Cluster Configuration
-
-### Node Distribution and Roles
-- **Nodes**: 5
-  - **Node: ip-192-168-52-147.ec2.internal**: Role - `standalone-indexer`
-  - **Node: ip-192-168-28-89.ec2.internal**: Role - `index-update`
-  - **Node: ip-192-168-27-123.ec2.internal**: Role - `query`
-  - **Node: ip-192-168-26-117.ec2.internal**: No AVS pods
-  - **Node: ip-192-168-53-124.ec2.internal**: No AVS pods
-
-### Endpoint Configuration and Visibility
-- **Listener Addresses**: Configured to listen on `0.0.0.0` for interconnect, with advertised listeners set to external IPs for each node.
-
-### Version Information
-- **Aerospike Version**: Not specified in the provided data.
-
-### Cluster ID and Networking Setup
-- **Cluster ID**: Not provided.
-- **Networking**: Nodes are distributed across AWS `us-east-1` region with different availability zones.
-
-### Analysis of Node Distribution vs Index Mode
-- **Index Mode**: Nodes are configured with roles that suggest a mix of `DISTRIBUTED` and `STANDALONE` modes, ensuring balanced workload distribution.
-
-## 2. 📊 AVS Index Analysis
-
-### Detailed Breakdown of Each Index Configuration
-- **Index Name, Namespace, and Set**: Not specified.
-- **Vector Dimensions and Distance Metric**: Not specified.
-- **HNSW Parameters**: Not specified.
-- **Batching and Caching Configurations**: Not specified.
-- **Healer and Merge Parameters**: Not specified.
-
-### Recommendations for Index Optimization
-- **Vector Dimensions vs Memory Usage**: Ensure vector dimensions are optimized to balance precision and memory usage.
-- **Caching Parameters vs Available Memory**: Adjust caching parameters to align with available memory to prevent OOM issues.
-- **Batching Parameters vs Cluster Size**: Optimize batching parameters to improve throughput without overwhelming cluster resources.
-
-## 3. ⚙️ JVM Configuration Analysis
-
-### Detailed Table for Each Node
-
-| Node Name/ID                       | Initial Heap (-Xms) | Maximum Heap (-Xmx) | Soft Max Heap (-XX:SoftMaxHeapSize) | Reserved Code Cache Size | GC Type | GC Threads | NUMA | Compressed Oops | Pre-touch | Compiler Threads | Used Heap | Heap Capacity | Max Capacity | Metaspace Usage | Class Space Usage |
-|------------------------------------|---------------------|---------------------|-------------------------------------|--------------------------|---------|------------|------|-----------------|-----------|------------------|-----------|---------------|--------------|-----------------|------------------|
-| ip-192-168-52-147.ec2.internal     | 1027 MB             | 50799 MB            | 50799 MB                            | 240 MB                   | ZGC     | 2          | Off  | Off             | On        | 4                | 3500 MB   | 23728 MB      | 50800 MB     | 80 MB           | 8.8 MB           |
-| ip-192-168-28-89.ec2.internal      | 243 MB              | 12554 MB            | 12554 MB                            | 240 MB                   | ZGC     | 1          | Off  | Off             | On        | 3                | 1254 MB   | 1514 MB       | 12554 MB     | 82 MB           | 8.9 MB           |
-| ip-192-168-27-123.ec2.internal     | 241 MB              | 12400 MB            | 12400 MB                            | 240 MB                   | ZGC     | 1          | Off  | Off             | On        | 3                | 720 MB    | 976 MB        | 12400 MB     | 77 MB           | 8 MB             |
-
-## 4. 💾 Memory Analysis
-
-### For Each Node
-- **Heap Size vs Container Limits**: Ensure heap size does not exceed container limits to prevent OOM issues.
-- **Memory Distribution Across Different Regions**: Monitor memory usage across heap, metaspace, and class space.
-- **GC Pressure Indicators**: Monitor GC activity to identify potential performance bottlenecks.
-- **Memory Efficiency Recommendations**: Optimize JVM settings based on observed memory usage patterns.
-- **Correlation Between Index Parameters and Memory Usage**: Adjust index parameters to optimize memory usage.
-
-## 5. 🔍 Performance Configuration Analysis
-
-- **Index Caching vs JVM Heap Size**: Ensure caching settings are aligned with JVM heap size to prevent memory pressure.
-- **Batching Parameters vs Available Memory**: Optimize batching parameters to balance throughput and memory usage.
-- **Thread Settings vs Available CPU**: Align thread settings with available CPU resources to optimize performance.
-- **Network Configuration Impact**: Ensure network settings support required throughput and latency.
-
-## 6. ⚠️ Potential Issues and Recommendations
-
-### Memory Configuration Improvements
-1. **Current Setting**: High maximum heap sizes.
-2. **Recommended Value**: Adjust based on actual usage.
-3. **Rationale for Change**: Prevent over-allocation and potential OOM.
-4. **Impact Assessment**: Improved stability and performance.
-5. **Implementation Steps**: Monitor usage, adjust `-Xmx`, and test.
-
-### Index Parameter Optimizations
-- Ensure index parameters align with available resources to optimize performance.
-
-### JVM Flag Adjustments
-- Enable NUMA settings if applicable for performance gains.
-
-### Cluster Balance Suggestions
-- Ensure even distribution of workloads across nodes.
-
-### Caching Strategy Improvements
-- Align caching settings with available memory to optimize performance.
-
-## 7. 📈 Scaling Considerations
-
-- **Current Resource Utilization**: Nodes are underutilized.
-- **Headroom for Growth**: Significant headroom available.
-- **Bottleneck Identification**: Monitor for potential CPU or memory bottlenecks.
-- **Scaling Recommendations**: Consider scaling down instance types or consolidating workloads.
-
-## 8. 🔄 Resource Overview
-
-| Node Name/ID                       | Total Memory | Allocatable Memory | AVS Pods on Node | Instance Type | Status/Health |
-|------------------------------------|--------------|--------------------|------------------|---------------|---------------|
-| ip-192-168-52-147.ec2.internal     | 62 GB        | 61 GB              | 1                | r5.2xlarge    | Healthy       |
-| ip-192-168-28-89.ec2.internal      | 16 GB        | 14.35 GB           | 1                | m5.xlarge     | Healthy       |
-| ip-192-168-27-123.ec2.internal     | 15.2 GB      | 14.2 GB            | 1                | m5.xlarge     | Healthy       |
-| ip-192-168-26-117.ec2.internal     | 15.16 GB     | 14.18 GB           | 0                | m5.xlarge     | Healthy       |
-| ip-192-168-53-124.ec2.internal     | 15.8 GB      | 14.8 GB            | 0                | m5.xlarge     | Healthy       |
-
-## 9. 📊 Node Overview
-
-| Pod Name                           | Roles                  | JVM Flags | Memory Request | Memory Limit | Memory Used |
-|------------------------------------|------------------------|-----------|----------------|--------------|-------------|
-| avs-app-aerospike-vector-search-0  | standalone-indexer     | ZGC       | 724Mi          | 1280Mi       | 3500 MB     |
-| avs-app-aerospike-vector-search-1  | index-update           | ZGC       | 184Mi          | 1280Mi       | 1254 MB     |
-| avs-app-aerospike-vector-search-2  | query                  | ZGC       | 120Mi          | 768Mi        | 720 MB      |
-
-## 10. ⚠️ OOMKill Analysis
-
-### Detailed Timeline of OOMKill Events
-- **No OOMKill events detected**: The cluster is stable with no memory pressure events or OOMKills.
-
-### For Each OOMKill Event Analyze
-- **JVM Heap Settings at the Time**: N/A
-- **Node Memory Capacity**: N/A
-- **Isolated Incident or Part of a Pattern**: N/A
-- **Correlation with Memory Pressure or Other Events**: N/A
-
-## Conclusion
-The Aerospike Vector Search cluster is currently stable with no OOMKills or memory pressure events. Nodes are underutilized, providing an opportunity for optimization and potential cost savings. Recommendations include adjusting JVM settings, optimizing index parameters, and ensuring even workload distribution across nodes. Regular monitoring and adjustments based on performance data will help maintain optimal cluster performance.
+null
 
 ## Detailed Node Analysis
 
@@ -130,100 +7,103 @@ The Aerospike Vector Search cluster is currently stable with no OOMKills or memo
 
 ### 🖥️ Node Analysis: ip-192-168-26-117.ec2.internal
 
-#### Node Capacity & Allocatable Resources
-- **CPU Capacity**: 4 cores
-- **Memory Capacity**: 15,896,988 Ki (~15.16 GiB)
-- **Allocatable CPU**: 3920m (~3.92 cores)
-- **Allocatable Memory**: 14,880,156 Ki (~14.18 GiB)
-- **Ephemeral Storage**: 83,873,772 Ki (~80 GiB)
-- **Pods Capacity**: 58
+#### Node Capacity & Allocatable Resources:
+- **CPU Capacity:** 4 cores
+- **Memory Capacity:** 15,896,988 Ki
+- **Allocatable CPU:** 3920m
+- **Allocatable Memory:** 14,880,156 Ki
+- **Pods Capacity & Allocatable:** 58
 
-#### Node Conditions
-- **Memory Pressure**: ❌ False (No memory pressure)
-- **Disk Pressure**: ❌ False (No disk pressure)
-- **PID Pressure**: ❌ False (No PID pressure)
-- **Node Ready**: ✅ True (Node is ready)
+#### Node Conditions:
+- **Memory Pressure:** ❌ False (Sufficient memory available)
+- **Disk Pressure:** ❌ False (No disk pressure)
+- **PID Pressure:** ❌ False (Sufficient PID available)
+- **Ready Status:** ✅ True (Node is ready)
 
-#### Cloud Provider Details
-- **Provider**: AWS
-- **Instance Type**: m5.xlarge
-- **Region**: us-east-1
-- **Zone**: us-east-1b
+#### Cloud Provider & Instance Type:
+- **Provider:** AWS
+- **Instance Type:** m5.xlarge
+- **Region:** us-east-1
+- **Zone:** us-east-1b
 
-#### Resource Allocation & Utilization
-- **CPU Requests**: 190m (4% of allocatable)
-- **Memory Requests**: 170Mi (1% of allocatable)
-- **Memory Limits**: 768Mi (5% of allocatable)
-- **Ephemeral Storage Requests**: 0
+#### Resource Allocation & Utilization:
+- **CPU Requests:** 190m (4%)
+- **Memory Requests:** 170Mi (1%)
+- **Memory Limits:** 768Mi (5%)
 
-#### Node-Level Issues
-- **OOM Events**: No OOM events detected.
+#### Node-Level Issues or Warnings:
+- No OOMKill events or system warnings detected.
 
-### 🏷️ Recommendations for Node-Level Optimizations
-1. **Resource Requests & Limits**: Consider setting resource requests and limits for all pods to ensure fair scheduling and prevent resource starvation.
-2. **Monitoring**: Implement monitoring for CPU and memory usage to better understand resource utilization trends.
-3. **Scaling**: Evaluate if the node's capacity aligns with current and future workload demands. Consider scaling up or down based on utilization.
+### Recommendations for Node-Level Optimizations:
+1. **Resource Requests & Limits:** Consider setting explicit CPU and memory limits for all pods to prevent over-allocation and ensure fair resource distribution.
+2. **Monitoring:** Implement monitoring for CPU and memory usage to identify potential bottlenecks or underutilization.
+3. **Scaling:** Evaluate the need for horizontal scaling if resource utilization approaches capacity limits.
 
-### 🚀 Pod-Level Analysis
-Unfortunately, no Aerospike Vector Search (AVS) pods were found on this node. Therefore, specific pod-level configurations and JVM settings cannot be analyzed.
+### Pod-Level Analysis:
+- **AVS Pods:** ❌ No Aerospike Vector Search pods found on this node.
 
-### 📈 Recommendations for Pod-Level Configurations
-1. **Ensure AVS Deployment**: Verify that AVS pods are correctly scheduled on nodes with appropriate resources.
-2. **JVM Configuration**: For AVS pods, ensure that JVM settings are optimized for your workload, focusing on heap size, garbage collection, and performance flags.
-3. **Node Affinity**: Use node affinity rules to ensure AVS pods are scheduled on nodes with sufficient resources and appropriate configurations.
+### Recommendations for Pod-Level Configurations:
+1. **Pod Distribution:** Ensure AVS pods are evenly distributed across nodes to balance the load and optimize resource usage.
+2. **Node Affinity:** Use node affinity or anti-affinity rules to control pod placement based on node labels or resources.
 
-### 🔍 General Recommendations
-1. **JVM Memory Settings**: If AVS pods are deployed, ensure JVM settings are configured for optimal performance:
-   - **Heap Size**: Set `-Xms` and `-Xmx` appropriately based on available memory.
-   - **GC Settings**: Use `-XX:+UseZGC` for low-latency garbage collection if applicable.
-   - **NUMA Settings**: Consider enabling `-XX:+UseNUMA` for better memory locality on NUMA systems.
+### Resource Allocation Adjustments:
+- **CPU & Memory Requests:** Review and adjust requests and limits for existing pods to align with actual usage patterns and prevent resource starvation.
 
-2. **Performance Improvements**: Regularly review and adjust JVM and Kubernetes configurations based on performance monitoring data.
+### Performance Improvements:
+1. **Node Utilization:** Regularly review node utilization metrics to identify opportunities for optimizing resource allocation.
+2. **Instance Type:** Consider upgrading to a larger instance type if consistent resource constraints are observed.
 
-### 📦 Conclusion
-The node is healthy and underutilized, providing a good opportunity to optimize resource allocation and scheduling. Ensure AVS pods are correctly deployed and configured to maximize performance and resource efficiency.
+### JVM Memory Settings (Hypothetical for AVS Pods):
+- **Initial Heap Size (-Xms):** Ensure it's set to a reasonable value based on pod memory requests.
+- **Maximum Heap Size (-Xmx):** Should not exceed the pod's memory limit to avoid OOM kills.
+- **GC Settings:** Use a suitable garbage collector like ZGC for low-latency applications.
+- **NUMA Settings:** If applicable, configure NUMA settings to optimize memory access patterns.
+
+### Conclusion:
+While the node is currently healthy and underutilized, it's essential to continuously monitor resource usage and adjust configurations to maintain optimal performance. Implementing the above recommendations will help in achieving efficient resource utilization and improved application performance. 🚀
 
 ### Node: ip-192-168-27-123.ec2.internal
 
-## 🖥️ Node Analysis: ip-192-168-27-123.ec2.internal
+### 🖥️ Node Analysis: ip-192-168-27-123.ec2.internal
 
-### Node Capacity & Conditions
+#### Node Information
+- **Instance Type**: m5.xlarge
+- **Region/Zone**: us-east-1/us-east-1b
 - **Capacity**: 
   - CPU: 4 cores
   - Memory: 15.2 GiB
   - Pods: 58
-- **Allocatable**:
+- **Allocatable**: 
   - CPU: 3920m
   - Memory: 14.2 GiB
-- **Conditions**:
+- **Conditions**: 
   - MemoryPressure: False
   - DiskPressure: False
   - PIDPressure: False
   - Ready: True
 
-### Cloud Provider & Instance Type
-- **Provider**: AWS
-- **Instance Type**: m5.xlarge
-- **Region**: us-east-1
-- **Zone**: us-east-1b
+#### Node Observations
+- **Resource Utilization**: 
+  - CPU Requests: 180m (4%)
+  - Memory Requests: 120Mi (0%)
+  - Memory Limits: 768Mi (5%)
+- **No OOM Events**: No system or Kubernetes OOM events found.
 
-### Resource Allocation & Utilization
-- **CPU Requests**: 180m (4%)
-- **Memory Requests**: 120Mi (0%)
-- **Memory Limits**: 768Mi (5%)
+### Recommendations for Node-Level Optimizations
+1. **Resource Requests and Limits**: Ensure that all critical pods have appropriate CPU and memory requests and limits set to avoid overcommitting resources.
+2. **Monitoring**: Implement monitoring for CPU and memory usage to ensure efficient utilization and identify potential bottlenecks.
+3. **Scaling**: Consider scaling the node group if resource utilization consistently approaches capacity.
 
-### Node-Level Issues
-- No OOMKill events or warnings detected.
+### 🧵 Pod Analysis: avs-app-aerospike-vector-search-2
 
-## 🧵 Pod Analysis: avs-app-aerospike-vector-search-2
+#### Configuration Review
+- **Cluster Name**: avs-db-1
+- **Node Roles**: query
+- **Heartbeat Seeds**: Correctly configured with two seeds.
+- **Interconnect Settings**: Listening on all interfaces (0.0.0.0) on port 5001.
+- **Advertised Listeners**: Correctly set to external IP 3.90.200.129 on port 5000.
 
-### Configuration Review
-- **Node Roles**: Correctly set to `query`.
-- **Heartbeat Seeds**: Properly configured with multiple seeds.
-- **Listener Addresses**: Set to 0.0.0.0, which is acceptable for internal communication.
-- **Interconnect Settings**: Ports configured correctly.
-
-### JVM Configuration
+#### JVM Configuration
 - **Memory Settings**:
   - Initial Heap Size: 241MB
   - Maximum Heap Size: 12.4GB
@@ -231,237 +111,140 @@ The node is healthy and underutilized, providing a good opportunity to optimize 
   - Reserved Code Cache Size: 240MB
 - **GC Settings**:
   - GC Type: ZGC
-  - GC Thread Counts: 1 for both young and old
-  - GC-Specific Flags: ZGenerational enabled
-- **Other Important Flags**:
-  - NUMA settings: Disabled
-  - Compressed oops: Disabled
-  - Pre-touch settings: Enabled
-  - Compiler settings: CICompilerCount=3
+  - GC Threads: Young (1), Old (1)
+  - GC Flags: ZGenerational enabled
+- **Other Flags**:
+  - NUMA: Disabled
+  - Compressed Oops: Disabled
+  - Pre-touch: Enabled
+  - Compiler Threads: 3
   - Exit on OOM: Enabled
-- **Module and Package Settings**:
-  - Added Modules: jdk.incubator.vector
-  - Opened Packages: Multiple packages opened for ALL-UNNAMED
+- **Module and Package Settings**: Various modules and packages are opened and exported for compatibility.
 
-### GC.heap_info Analysis
-- **Current Heap Usage**: 720MB
-- **Heap Capacity**: 976MB
+#### Heap Info
+- **Current Heap Usage**: 636MB
+- **Heap Capacity**: 1344MB
 - **Max Capacity**: 12.4GB
 - **Metaspace Usage**: 77MB
-- **Class Space Usage**: 8MB
+- **Class Space Usage**: 8.4MB
 
-### Config-Injection Logs
-- No failed config-injection logs detected.
+### Recommendations for Pod-Level Configurations
+1. **JVM Memory Settings**: Consider adjusting the initial heap size (-Xms) to be closer to the maximum heap size (-Xmx) for better performance and to reduce GC overhead.
+2. **GC Configuration**: Evaluate the need for more GC threads if the application experiences latency due to garbage collection.
+3. **NUMA Settings**: If running on a NUMA architecture, consider enabling NUMA settings for potential performance improvements.
 
-## Recommendations
+### Resource Allocation Adjustments
+- **CPU and Memory Requests**: Set explicit CPU and memory requests and limits for the AVS pod to ensure resource availability and prevent resource contention.
 
-### 1. Node-Level Optimizations
-- **CPU Utilization**: Consider increasing CPU requests to better reflect actual usage and prevent potential throttling.
-- **Memory Utilization**: Monitor memory usage closely; current requests are minimal.
+### Performance Improvements
+1. **Heap Tuning**: Monitor heap usage and adjust the heap size as needed to ensure efficient memory utilization.
+2. **GC Monitoring**: Continuously monitor GC performance and adjust settings to optimize for latency and throughput.
 
-### 2. Pod-Level Configurations
-- **Heartbeat Configuration**: Ensure all seed nodes are consistently reachable to avoid split-brain scenarios.
-- **Listener Configuration**: Ensure security measures are in place if using 0.0.0.0 for listener addresses.
+### JVM Memory Settings
+- **Initial and Max Heap Size**: Align -Xms with -Xmx for stable memory usage.
+- **Code Cache**: Ensure the reserved code cache size is sufficient for the application’s needs.
 
-### 3. Resource Allocation Adjustments
-- **Memory Requests**: Increase memory requests to reflect JVM's max heap size to prevent potential OOM issues.
-- **CPU Requests**: Align CPU requests with JVM's thread usage to optimize performance.
-
-### 4. Performance Improvements
-- **GC Tuning**: Evaluate the need for more GC threads if experiencing latency during garbage collection.
-- **NUMA Settings**: Consider enabling NUMA settings if running on a NUMA architecture for potential performance gains.
-
-### 5. JVM Memory Settings
-- **Heap Size**: Ensure the JVM's max heap size does not exceed the node's allocatable memory.
-- **Code Cache**: Monitor code cache usage to ensure it's sufficient for the application's needs.
-
-By implementing these recommendations, you can enhance the performance and reliability of your Aerospike Vector Search deployment on this Kubernetes node. 🚀
+By implementing these recommendations, you can optimize the performance and reliability of the Aerospike Vector Search pods on this node. 🌟
 
 ### Node: ip-192-168-28-89.ec2.internal
 
-## 🖥️ Node Analysis: ip-192-168-28-89.ec2.internal
+### 🚀 Kubernetes Node Analysis: ip-192-168-28-89.ec2.internal
 
-### Node Overview
-- **Instance Type**: `m5.xlarge`
-- **Region/Zone**: `us-east-1/us-east-1b`
-- **Capacity**: 
-  - CPU: 4 cores
-  - Memory: 16 GB
-  - Pods: 58
-- **Allocatable Resources**:
-  - CPU: 3920m
-  - Memory: 14.35 GB
-  - Pods: 58
-- **Node Conditions**: 
-  - No memory, disk, or PID pressure.
-  - Node is ready.
+#### 🖥️ Node Overview
+- **Instance Type**: m5.xlarge
+- **Region/Zone**: us-east-1/us-east-1b
+- **Capacity**: 4 CPUs, 16GB Memory
+- **Allocatable**: 3920m CPUs, ~15GB Memory
+- **Node Conditions**: All conditions are healthy (MemoryPressure, DiskPressure, PIDPressure are False; Ready is True).
 
-### 🏷️ Cloud Provider Details
+#### 🏷️ Cloud Provider Details
 - **Provider**: AWS
-- **Instance Type**: `m5.xlarge`
-- **Capacity Type**: On-Demand
+- **Instance Type**: m5.xlarge
+- **Capacity Type**: ON_DEMAND
 
-### 📊 Resource Allocation and Utilization
+#### 📊 Resource Allocation and Utilization
 - **CPU Requests**: 190m (4%)
 - **CPU Limits**: 400m (10%)
 - **Memory Requests**: 184Mi (1%)
 - **Memory Limits**: 1280Mi (8%)
 
-### 🔍 Node-Level Issues or Warnings
-- No OOM events or warnings detected.
-- Node is operating within normal parameters.
+#### 🔍 Node-Level Issues or Warnings
+- **No OOMKill Events**: Both system and Kubernetes OOM events are absent.
+- **No Node-Level Warnings**: Node is operating without issues.
 
-## 🧵 AVS Pod Analysis: avs-app-aerospike-vector-search-1
+### 🧵 AVS Pod Analysis: avs-app-aerospike-vector-search-1
 
-### 📄 Configuration Review: aerospike-vector-search.yml
-- **Node Roles**: `index-update`
-- **Heartbeat Seeds**: 
-  - `avs-app-aerospike-vector-search-0` and `avs-app-aerospike-vector-search-2` on port `5001`
-- **Listener Addresses**: 
-  - Advertised on `54.226.248.213` port `5000`
-- **Interconnect Settings**: 
-  - Port `5001` open on `0.0.0.0`
+#### 📄 Configuration Review: aerospike-vector-search.yml
+- **Node Roles**: index-update
+- **Heartbeat Seeds**: Correctly configured with two seeds.
+- **Listener Addresses**: Configured to listen on 0.0.0.0, which is appropriate for internal communication.
+- **Interconnect Settings**: Port 5001 is open for interconnect.
 
-### 📦 JVM Configuration
+#### 📦 JVM Configuration Analysis
 - **Memory Settings**:
-  - Initial Heap Size: `243M`
-  - Maximum Heap Size: `12.5G`
-  - Soft Max Heap Size: `12.5G`
-  - Reserved Code Cache Size: `240M`
-  - Code Heap Sizes: NonNMethod: `5.8M`, NonProfiled: `122M`, Profiled: `122M`
+  - **Initial Heap Size**: Not explicitly set, defaults to 243MB.
+  - **Maximum Heap Size (-Xmx)**: 12.5GB
+  - **Soft Max Heap Size**: 12.5GB
+  - **Reserved Code Cache Size**: 240MB
+  - **Code Heap Sizes**: NonNMethod: 5.6MB, NonProfiled: 122MB, Profiled: 122MB
+
 - **GC Settings**:
-  - GC Type: `ZGC`
-  - GC Thread Counts: Young: `1`, Old: `1`
-  - GC-specific Flags: `ZGenerational`
+  - **GC Type**: ZGC with generational support
+  - **GC Threads**: 1 thread each for young and old generation collections
+  - **GC Flags**: ZGenerational enabled
+
 - **Other Important Flags**:
-  - NUMA settings: `-XX:-UseNUMA`, `-XX:-UseNUMAInterleaving`
-  - Compressed oops: `-XX:-UseCompressedOops`
-  - Pre-touch settings: `-XX:+AlwaysPreTouch`
-  - Compiler settings: `-XX:CICompilerCount=3`
-  - Exit on OOM: `-XX:+ExitOnOutOfMemoryError`
+  - **NUMA Settings**: Disabled
+  - **Compressed Oops**: Disabled
+  - **Pre-touch Settings**: Enabled
+  - **Compiler Settings**: CICompilerCount set to 3
+  - **Exit on OOM**: Enabled
+
 - **Module and Package Settings**:
-  - Added modules: `jdk.incubator.vector`
-  - Opened packages: Multiple packages opened for unnamed modules.
+  - **Added Modules**: jdk.incubator.vector
+  - **Opened Packages**: Various internal Java packages for enhanced access
+  - **Exported Packages**: Several packages for internal use
 
-### 📈 GC.heap_info Analysis
-- **Current Heap Usage**: 1254M
-- **Heap Capacity**: 1514M
-- **Max Capacity**: 12554M
-- **Metaspace Usage**: 82M
-- **Class Space Usage**: 8.9M
+#### 📈 GC.heap_info Analysis
+- **Current Heap Usage**: 1120MB
+- **Heap Capacity**: 1666MB
+- **Max Capacity**: 12.5GB
+- **Metaspace Usage**: 82MB
+- **Class Space Usage**: 8.9MB
 
-### 🛠️ Config-Injection Logs
-- No failed config-injection logs detected.
+#### 🛠️ Config-Injection Logs
+- **No Failed Config-Injection Logs**: Configuration injection completed successfully.
 
-## Recommendations
+### 📌 Recommendations
 
-### 1. Node-Level Optimizations
-- **CPU and Memory**: Current utilization is low. Consider scaling down instance type if consistent underutilization is observed.
-- **Pod Density**: With available resources, consider increasing pod density for better resource utilization.
+#### 1. Node-Level Optimizations
+- **CPU and Memory Utilization**: Consider increasing resource requests to better reflect actual usage and prevent potential throttling.
 
-### 2. Pod-Level Configurations
-- **Heartbeat Seeds**: Ensure redundancy and availability by verifying seed nodes are consistently reachable.
-- **Listener Configuration**: Validate that the advertised IP and ports are correctly configured for external communication.
+#### 2. Pod-Level Configurations
+- **Heartbeat Configuration**: Ensure all seeds are reachable and correctly configured to prevent split-brain scenarios.
 
-### 3. Resource Allocation Adjustments
-- **CPU and Memory Requests**: Increase requests to better reflect actual usage, ensuring pods have guaranteed resources.
-- **Memory Limits**: Review and adjust memory limits to prevent potential OOM issues.
+#### 3. Resource Allocation Adjustments
+- **CPU and Memory Requests**: Adjust requests to match usage patterns, ensuring pods have sufficient resources without overcommitting.
 
-### 4. Performance Improvements
-- **JVM GC Tuning**: ZGC is suitable for low-latency applications. Ensure GC threads are optimized for workload.
-- **NUMA Settings**: Consider enabling NUMA settings if running on a multi-socket system for potential performance gains.
+#### 4. Performance Improvements
+- **GC Optimization**: Monitor ZGC performance; consider adjusting thread counts based on workload characteristics.
 
-### 5. JVM Memory Settings
-- **Heap Size**: Current settings are appropriate. Monitor and adjust based on application load.
-- **Metaspace and Class Space**: Ensure these are monitored to prevent potential memory issues.
+#### 5. JVM Memory Settings
+- **Heap Size**: Ensure -Xmx is set appropriately based on node capacity and application needs.
+- **Compressed Oops**: Consider enabling if memory savings are needed and performance impact is acceptable.
 
-By implementing these recommendations, you can enhance the performance and efficiency of your Aerospike Vector Search deployment. 🚀
+By addressing these recommendations, you can enhance the performance and reliability of your Aerospike Vector Search deployment on this Kubernetes node.
 
 ### Node: ip-192-168-52-147.ec2.internal
 
-### 🚀 Aerospike Vector Search Node and Pod Analysis Report
-
-#### 🖥️ Node Analysis: `ip-192-168-52-147.ec2.internal`
-- **Instance Type**: `r5.2xlarge` (AWS)
-- **Region/Zone**: `us-east-1/us-east-1d`
-- **Node Capacity**:
-  - **CPU**: 8 cores
-  - **Memory**: 62 GB
-  - **Pods**: 58
-- **Allocatable Resources**:
-  - **CPU**: 7910m
-  - **Memory**: 61 GB
-- **Node Conditions**: All conditions are healthy (No memory, disk, or PID pressure)
-- **Resource Usage**:
-  - **CPU Requests**: 230m (2%)
-  - **Memory Requests**: 724Mi (1%)
-  - **CPU Limits**: 400m (5%)
-  - **Memory Limits**: 1280Mi (2%)
-
-#### 🛠️ Node-Level Recommendations
-1. **Resource Allocation**: Consider setting specific resource requests and limits for the AVS pod to ensure resource predictability and avoid overcommitment.
-2. **Node Utilization**: The node is underutilized in terms of CPU and memory. Optimize pod placement or consider consolidating workloads to reduce costs.
-
-#### 🧵 Pod Analysis: `avs-app-aerospike-vector-search-0`
-- **Node Roles**: Correctly set to `standalone-indexer`.
-- **Heartbeat Seeds**: Properly configured with two seeds.
-- **Listener Addresses**: Configured to listen on `0.0.0.0` for interconnect.
-- **Advertised Listeners**: Correctly set to external IP `3.238.188.22`.
-
-##### 📦 JVM Configuration
-- **Memory Settings**:
-  - **Initial Heap Size (-Xms)**: 1027 MB
-  - **Maximum Heap Size (-Xmx)**: 50799 MB
-  - **Soft Max Heap Size (-XX:SoftMaxHeapSize)**: 50799 MB
-  - **Reserved Code Cache Size (-XX:ReservedCodeCacheSize)**: 240 MB
-  - **Code Heap Sizes**:
-    - **NonNMethod**: 5.8 MB
-    - **NonProfiled**: 117 MB
-    - **Profiled**: 117 MB
-- **GC Settings**:
-  - **GC Type**: ZGC with generational support
-  - **GC Threads**: 2 old, 2 young
-- **Other Flags**:
-  - **NUMA Settings**: Disabled
-  - **Compressed Oops**: Not used
-  - **Pre-touch**: Enabled
-  - **Compiler Threads**: 4
-  - **Exit on OOM**: Enabled
-- **Module and Package Settings**:
-  - **Added Modules**: `jdk.incubator.vector`
-  - **Opened Packages**: Multiple packages opened for internal access
-
-##### 📈 GC Heap Info
-- **Current Heap Usage**: 3500 MB
-- **Heap Capacity**: 23728 MB
-- **Max Capacity**: 50800 MB
-- **Metaspace Usage**: 80 MB
-- **Class Space Usage**: 8.8 MB
-
-#### 🛠️ Pod-Level Recommendations
-1. **JVM Memory Settings**: The maximum heap size is set high. Monitor heap usage to ensure it aligns with actual needs and adjust `-Xmx` accordingly.
-2. **GC Configuration**: ZGC is suitable for low-latency applications. Ensure it meets your performance requirements.
-3. **NUMA Settings**: Consider enabling NUMA if the node's architecture supports it for potential performance gains.
-
-#### 🔍 Additional Observations
-- **Config-Injection Logs**: No failed config-injection logs were found, indicating successful configuration setup.
-
-### 📈 Performance Improvements
-1. **Resource Requests**: Define specific CPU and memory requests/limits for AVS pods to improve resource allocation efficiency.
-2. **Heap Management**: Regularly review heap usage and adjust JVM settings to prevent over-allocation and improve performance.
-3. **Monitoring**: Implement detailed monitoring to track JVM and application performance metrics for proactive management.
-
-By implementing these recommendations, you can enhance the performance and efficiency of your Aerospike Vector Search deployment on Kubernetes. 🚀
-
-### Node: ip-192-168-53-124.ec2.internal
-
-### 🖥️ Node Analysis: ip-192-168-53-124.ec2.internal
+### 🖥️ Node Analysis: ip-192-168-52-147.ec2.internal
 
 #### Node Capacity and Allocatable Resources
-- **CPU**: 4 cores
-- **Memory**: 15.8 GiB total, 14.8 GiB allocatable
-- **Ephemeral Storage**: ~80 GiB total, ~76 GiB allocatable
-- **Pods**: 58 max
+- **CPU Capacity**: 8 cores
+- **Memory Capacity**: 62GB
+- **Allocatable CPU**: 7910m (7.91 cores)
+- **Allocatable Memory**: 61GB
+- **Pods Capacity**: 58
 
 #### Node Conditions
 - **MemoryPressure**: False (Sufficient memory available)
@@ -471,40 +254,138 @@ By implementing these recommendations, you can enhance the performance and effic
 
 #### Cloud Provider Details
 - **Provider**: AWS
-- **Instance Type**: m5.xlarge
+- **Instance Type**: r5.2xlarge
 - **Region**: us-east-1
 - **Zone**: us-east-1d
 
 #### Resource Allocation and Utilization
-- **CPU Requests**: 500m (12% of allocatable)
-- **Memory Requests**: 740Mi (5% of allocatable)
-- **Memory Limits**: 4180Mi (28% of allocatable)
-- **No overcommitment**: Total limits are within allocatable resources
+- **CPU Requests**: 230m (2% of allocatable)
+- **CPU Limits**: 400m (5% of allocatable)
+- **Memory Requests**: 724Mi (1% of allocatable)
+- **Memory Limits**: 1280Mi (2% of allocatable)
 
 #### Node-Level Issues or Warnings
-- **No OOM events**: Both system and Kubernetes OOM events are absent.
-- **No AVS pods found**: This node does not currently host any Aerospike Vector Search (AVS) pods.
+- No OOMKill events or system-level warnings detected.
+
+### 🧵 Pod Analysis: avs-app-aerospike-vector-search-0
+
+#### Configuration Validation
+- **Node Roles**: Correctly set as `standalone-indexer`.
+- **Heartbeat Seeds**: Configured with two seeds, ensuring redundancy.
+- **Listener Addresses**: Advertised listener correctly set to the external IP.
+- **Interconnect Settings**: Ports configured to listen on all interfaces.
+
+#### JVM Configuration
+- **Memory Settings**:
+  - **Initial Heap Size (-Xms)**: 1GB
+  - **Maximum Heap Size (-Xmx)**: ~51GB
+  - **Soft Max Heap Size (-XX:SoftMaxHeapSize)**: ~51GB
+  - **Reserved Code Cache Size (-XX:ReservedCodeCacheSize)**: 240MB
+  - **Code Heap Sizes**: NonNMethod: ~5.6MB, NonProfiled: ~117MB, Profiled: ~117MB
+
+- **GC Settings**:
+  - **GC Type**: ZGC
+  - **GC Thread Counts**: ZYoungGCThreads: 2, ZOldGCThreads: 2
+  - **GC-Specific Flags**: ZGenerational enabled
+
+- **Other Important Flags**:
+  - **NUMA Settings**: NUMA and NUMAInterleaving not used
+  - **Compressed Oops**: Not explicitly disabled
+  - **Pre-touch Settings**: AlwaysPreTouch enabled
+  - **Compiler Settings**: CICompilerCount set to 4
+  - **Exit on OOM**: Enabled
+
+- **Module and Package Settings**:
+  - **Added Modules**: jdk.incubator.vector
+  - **Opened Packages**: Multiple packages opened for internal access
+  - **Exported Packages**: Several packages exported for internal use
+
+#### GC.heap_info Analysis
+- **Current Heap Usage**: ~1GB
+- **Heap Capacity**: ~4.6GB
+- **Max Capacity**: ~51GB
+- **Metaspace Usage**: ~79MB
+- **Class Space Usage**: ~8.6MB
+
+#### Config-Injection Logs
+- No failed config-injection logs detected.
 
 ### Recommendations
 
-#### 1. Node-Level Optimizations
-- **Resource Monitoring**: Continue monitoring CPU and memory usage to ensure they remain within optimal levels.
-- **Instance Type**: Consider upgrading to a larger instance type if you plan to deploy AVS pods, which may require more resources.
+1. **Node-Level Optimizations**:
+   - Consider setting explicit CPU and memory requests/limits for all pods to better manage resource allocation and avoid overcommitment.
 
-#### 2. Pod-Level Configurations
-- **AVS Pod Deployment**: Ensure AVS pods are scheduled on nodes with sufficient resources. Currently, no AVS pods are running on this node.
+2. **Pod-Level Configurations**:
+   - Ensure all pods have defined resource requests and limits to prevent resource starvation.
 
-#### 3. Resource Allocation Adjustments
-- **CPU and Memory Requests**: Adjust requests and limits for existing pods to optimize resource utilization and prevent resource starvation.
+3. **Resource Allocation Adjustments**:
+   - Review and adjust the resource allocation for non-critical pods to free up resources for AVS.
 
-#### 4. Performance Improvements
-- **Node Balancing**: Distribute pods evenly across nodes to avoid overloading a single node.
+4. **Performance Improvements**:
+   - Monitor heap usage and adjust JVM settings if memory usage approaches limits.
+   - Consider enabling NUMA settings if the workload benefits from it.
 
-#### 5. JVM Memory Settings
-- **AVS Pods**: When deploying AVS pods, ensure JVM settings are optimized for performance:
-  - **Heap Size**: Set initial and maximum heap sizes based on available memory.
-  - **GC Settings**: Use appropriate garbage collection settings to minimize latency.
-  - **NUMA and Compressed Oops**: Configure based on node architecture for performance gains.
+5. **JVM Memory Settings**:
+   - The current JVM settings are well-optimized for the node's memory capacity. Regularly monitor and adjust as needed based on application performance and load.
 
-### 📊 Summary
-The node `ip-192-168-53-124.ec2.internal` is in good health with no current resource pressures or OOM events. However, it does not host any AVS pods. For future deployments, ensure the node has adequate resources and is configured to handle the specific requirements of AVS workloads.
+By addressing these recommendations, you can ensure optimal performance and resource utilization for your Aerospike Vector Search deployment. 🚀
+
+### Node: ip-192-168-53-124.ec2.internal
+
+### 🖥️ Node Analysis: ip-192-168-53-124.ec2.internal
+
+#### Node Capacity & Conditions
+- **CPU Capacity**: 4 cores
+- **Memory Capacity**: 15,896,988 Ki (~15.16 Gi)
+- **Allocatable CPU**: 3920m
+- **Allocatable Memory**: 14,880,156 Ki (~14.18 Gi)
+- **Pod Capacity**: 58
+- **Conditions**: 
+  - **MemoryPressure**: False (Sufficient memory)
+  - **DiskPressure**: False (No disk pressure)
+  - **PIDPressure**: False (Sufficient PID)
+  - **Ready**: True (Node is ready)
+
+#### Cloud Provider & Instance Type
+- **Provider**: AWS
+- **Instance Type**: m5.xlarge
+- **Region**: us-east-1
+- **Zone**: us-east-1d
+
+#### Resource Allocation & Utilization
+- **CPU Requests**: 12% of total capacity
+- **Memory Requests**: 5% of total capacity
+- **Memory Limits**: 28% of total capacity
+- **Ephemeral Storage**: Not utilized
+
+#### Node-Level Issues or Warnings
+- **OOM Events**: None
+- **Node Events**: None
+
+### Recommendations for Node-Level Optimizations
+1. **Resource Utilization**: Consider increasing resource requests for critical pods to ensure they have sufficient resources during peak loads.
+2. **Ephemeral Storage**: Monitor storage usage and set limits if necessary to prevent potential issues.
+3. **Node Monitoring**: Implement a monitoring solution to keep track of node health and performance metrics.
+
+### 🚀 Pod-Level Configurations
+- **No AVS Pods Found**: There are no Aerospike Vector Search pods running on this node.
+
+### 🛠️ Recommendations for Pod-Level Configurations
+1. **Pod Scheduling**: Ensure AVS pods are scheduled on nodes with sufficient resources by using node selectors or affinity rules.
+2. **Resource Requests**: Define appropriate CPU and memory requests/limits for AVS pods to prevent resource contention.
+
+### 📈 Resource Allocation Adjustments
+1. **CPU and Memory**: Adjust resource requests and limits based on the actual usage patterns observed in the monitoring data.
+2. **Pod Distribution**: Balance the pod distribution across nodes to optimize resource utilization.
+
+### 🔧 Performance Improvements
+1. **Node Autoscaling**: Consider enabling cluster autoscaling to dynamically adjust the number of nodes based on workload demands.
+2. **Instance Type**: Evaluate if the current instance type (m5.xlarge) meets the performance requirements or if an upgrade is necessary.
+
+### 🧠 JVM Memory Settings (Hypothetical for AVS Pods)
+- **Initial Heap Size (-Xms)**: Ensure it is set to a reasonable value based on pod memory requests.
+- **Maximum Heap Size (-Xmx)**: Align with the memory limits to prevent OOM errors.
+- **GC Settings**: Use appropriate garbage collection settings for optimal performance.
+
+### Conclusion
+The node is in good health with no immediate issues. However, there are no AVS pods currently running on this node. Ensure that when AVS pods are deployed, they are configured with appropriate resource requests and limits to maintain optimal performance.
